Remove contacts page and fixed CSS bugs for portfolio page

--- a/src/containers/portfolio/style.scss
+++ b/src/containers/portfolio/style.scss
@@ -52,7 +52,7 @@
                 &_imgWrap{
                     height: 100%;
 
-                    a{
+                    &_screen{
                         height: 100%;
 
                         img{
