Changed the theme

--- a/src/components/pageHeader/style.scss
+++ b/src/components/pageHeader/style.scss
@@ -3,7 +3,7 @@
     align-items: center;
     padding: 20px;
     padding-top: 30px;
-    border-bottom: 1px dashed var(--yellow-theme-main-color);
+    border-bottom: 1px dashed var(--blue-theme-main-color);
 
     h2{
         font-size: 40px;
@@ -11,14 +11,14 @@
         letter-spacing: 1.5px;
         line-height: 1rem;
         text-transform: capitalize;
-        color: var(--yellow-theme-main-color);
+        color: var(--blue-theme-main-color);
         display: flex;
         flex-grow: 1;
     }
 
     span{
         svg{
-            color: var(--yellow-theme-main-color);
+            color: var(--blue-theme-main-color);
         }
     }
 
