--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap");
 
 :root{
-  --yellow-theme-background-color: #1d1d1d;
-  --yellow-theme-main-color: #ffdd40;
+  --yellow-theme-background-color: #EBF5FE;
+  --blue-theme-main-color: #2770CC;
   --yellow-theme-subtext-color: #ffffff;
-  --yellow-theme-nav-background-color: #181818;
+  --yellow-theme-nav-background-color: #2469BD;
+  --black-text-color: #0d2542;
 }
 
 *{
