--- a/src/components/navBar/style.scss
+++ b/src/components/navBar/style.scss
@@ -15,7 +15,7 @@
         padding: 0px 20px;
 
         &_logo{
-            color: var(--yellow-theme-main-color);
+            color: var(--yellow-theme-background-color);
             cursor: pointer;
         }
 
@@ -40,11 +40,11 @@
 
                 &:hover::after{
                     width: 100%;
-                    background-color: var(--yellow-theme-main-color);
+                    background-color: var(--yellow-theme-background-color);
                 }
 
                 &_links{
-                    color: var(--yellow-theme-main-color);
+                    color: var(--yellow-theme-background-color);
                     text-decoration: none;
                     padding: 1rem;
                 }
@@ -87,7 +87,7 @@
     .nav-icon{
         display: block;
         cursor: pointer;
-        color: var(--yellow-theme-main-color);
+        color: var(--blue-theme-main-color);
         padding-right: 20px;
     }
 }
