--- a/src/containers/home/style.scss
+++ b/src/containers/home/style.scss
@@ -12,7 +12,7 @@
         width: 100%;
 
         h1{
-            color: var(--yellow-theme-main-color);
+            color: var(--blue-theme-main-color);
             margin: 0px;
             display: flex;
             justify-content: center;
@@ -37,12 +37,12 @@
             font-size: 2rem;
             font-weight: 600;
             letter-spacing: 1px;
-            border: 2px solid var(--yellow-theme-main-color);
-            color: var(--yellow-theme-main-color);
+            border: 2px solid var(--blue-theme-main-color);
+            color: var(--blue-theme-main-color);
             background: transparent;
             border-radius: 10px;
             &:hover{
-                background-color: var(--yellow-theme-main-color);
+                background-color: var(--blue-theme-main-color);
                 color: #1d1d1d;
                 font-weight: 600;
             }
