--- a/src/containers/portfolio/style.scss
+++ b/src/containers/portfolio/style.scss
@@ -9,8 +9,8 @@
             display: inline-block;
             margin: 0px auto;
             border-radius: 25px;
-            border: 1px dashed var(--yellow-theme-main-color);
-            color: var(--yellow-theme-main-color);
+            border: 1px dashed var(--blue-theme-main-color);
+            color: var(--blue-theme-main-color);
 
             li{
                 font-size: 16px;
@@ -19,13 +19,13 @@
                 position: relative;
                 border-radius: 25%;
                 padding: 10px 20px;
-                color: var(--yellow-theme-main-color);
+                color: var(--blue-theme-main-color);
                 text-transform: uppercase;
                 // overflow: hidden;
                 transition: all 0.5s ease;
 
                 &.active{
-                    background: var(--yellow-theme-main-color);
+                    background: var(--blue-theme-main-color);
                     color: #181818;
                     font-weight: 600;
                     border-radius: 25px;
@@ -73,7 +73,7 @@
                     width: 100%;
                     opacity: 0;
                     transition: 0.5s ease;
-                    background: var(--yellow-theme-main-color);
+                    background: var(--blue-theme-main-color);
 
                     div{
                         position: absolute;
