--- a/src/containers/skills/style.scss
+++ b/src/containers/skills/style.scss
@@ -12,7 +12,7 @@
 
             &_categoryHead{
                 display: inline-block;
-                color: var(--yellow-theme-main-color);
+                color: var(--blue-theme-main-color);
                 font-size: 22px;
                 font-weight: 700;
                 line-height: 1rem;
@@ -20,7 +20,7 @@
                 position: relative;
                 text-transform: uppercase;
                 padding: 5px 10px;
-                border-bottom: 2px solid var(--yellow-theme-main-color);
+                border-bottom: 2px solid var(--blue-theme-main-color);
             };
 
             &_categoryHead::before , &_categoryHead::after{
@@ -28,7 +28,7 @@
                 content: "";
                 width: 2px;
                 height: 5px;
-                background: var(--yellow-theme-main-color);
+                background: var(--blue-theme-main-color);
                 bottom: -1px;
             };
 
@@ -52,7 +52,7 @@
                     margin: 0 0 10px;
                     font-weight: 500;
                     text-transform: uppercase;
-                    color: var(--yellow-theme-subtext-color);
+                    color: var(--black-text-color);
                 }
             }
 
