Button hover text color change

--- a/src/containers/home/style.scss
+++ b/src/containers/home/style.scss
@@ -43,7 +43,7 @@
             border-radius: 10px;
             &:hover{
                 background-color: var(--blue-theme-main-color);
-                color: #1d1d1d;
+                color: #EBF5FE;
                 font-weight: 600;
             }
         }
