--- a/src/components/navBar/style.scss
+++ b/src/components/navBar/style.scss
@@ -27,7 +27,9 @@
             &_items{
                 line-height: 40px;
                 margin-right: 1.5rem;
-                font-size: 1.6rem;
+                font-size: 1.8rem;
+                font-weight: 500;
+                letter-spacing: 1px;
 
                 &::after{
                     content: '';
@@ -62,7 +64,7 @@
     .navbar_container_menu{
         display: flex;
         flex-direction: column;
-        justify-content: baseline;
+        justify-content: center;
         width: 100%;
         position: absolute;
         top: 80px;
@@ -87,7 +89,7 @@
     .nav-icon{
         display: block;
         cursor: pointer;
-        color: var(--blue-theme-main-color);
+        color: var(--yellow-theme-background-color);
         padding-right: 20px;
     }
 }
