--- a/src/components/navBar/style.scss
+++ b/src/components/navBar/style.scss
@@ -6,6 +6,7 @@
     align-items: center ;
     font-size: 1.2rem;
     position: sticky;
+    z-index: 2;
 
     &_container{
         display: flex;
